--- a/Example Test App/Headers/Title/TitleHeaderView.xib
+++ b/Example Test App/Headers/Title/TitleHeaderView.xib
@@ -12,26 +12,20 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="109"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" id="ynh-Qh-LXo" userLabel="view">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="109"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBf-3a-1J0">
-                            <rect key="frame" x="10" y="10" width="394" height="89"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    <constraints>
-                        <constraint firstAttribute="bottom" secondItem="JBf-3a-1J0" secondAttribute="bottom" constant="10" id="2X6-6D-CUM"/>
-                        <constraint firstItem="JBf-3a-1J0" firstAttribute="leading" secondItem="ynh-Qh-LXo" secondAttribute="leading" constant="10" id="KhK-Jq-VzL"/>
-                        <constraint firstAttribute="trailing" secondItem="JBf-3a-1J0" secondAttribute="trailing" constant="10" id="Q7T-RL-RWs"/>
-                        <constraint firstItem="JBf-3a-1J0" firstAttribute="top" secondItem="ynh-Qh-LXo" secondAttribute="top" constant="10" id="a0X-7F-hQu"/>
-                    </constraints>
-                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBf-3a-1J0">
+                    <rect key="frame" x="10" y="10" width="394" height="89"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="JBf-3a-1J0" secondAttribute="bottom" constant="10" id="78V-Nm-eov"/>
+                <constraint firstItem="JBf-3a-1J0" firstAttribute="top" secondItem="PHr-7X-q3r" secondAttribute="top" constant="10" id="HHB-xe-m90"/>
+                <constraint firstAttribute="trailing" secondItem="JBf-3a-1J0" secondAttribute="trailing" constant="10" id="S0z-Kd-1MD"/>
+                <constraint firstItem="JBf-3a-1J0" firstAttribute="leading" secondItem="PHr-7X-q3r" secondAttribute="leading" constant="10" id="TIP-v5-9ak"/>
+            </constraints>
             <connections>
                 <outlet property="label" destination="JBf-3a-1J0" id="hVx-sB-PTu"/>
             </connections>
